--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint-staged": "lint-staged"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.5",
     "element-plus": "^2.8.1",
     "pinia": "^2.1.3",
