--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.5",
     "element-plus": "^2.8.1",
     "pinia": "^2.1.3",
+    "typeit": "^8.8.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
