--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.1.3",
     "typeit": "^8.8.4",
     "vue": "^3.3.4",
+    "vue-particle-line": "^0.1.4",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
